remove position relative

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </section>
 
-        <section class="section h-100-vh bg-purple position-relative overflow-hidden">
+        <section class="section h-100-vh bg-purple overflow-hidden">
             <div class="circle position-absolute"></div>
             <div class="container custom-container h-100">
                 <div class="row align-items-center h-100">
@@ -45,7 +45,7 @@
             </div>
         </section>
 
-        <section class="section h-100-vh bg-purple position-relative overflow-hidden">
+        <section class="section h-100-vh bg-purple overflow-hidden">
             <div class="circle right position-absolute"></div>
             <div class="container custom-container h-100">
                 <div class="text-fill position-absolute normal-text text-gradient">PRODUCTS</div>
