--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>
     </main>
 
-    <footer class="py-5">
+    <footer class="py-5 bg-body position-relative">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3">
