--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </nav>
     
     <main>
-        <section class="section h-100-vh py-5 hero-section bg-purple">
+        <section class="section h-100-vh hero-section bg-purple">
             <div class="container custom-container">
-                <div class="row align-items-center row-gap-4">
+                <div class="row align-items-center row-gap-4 h-100-vh">
                     <div class="col-xxl-7 col-xl-8 col-lg-6">
                         <h1 class="h1">Revolutionizing Medical QUALITY PRODUCTS -Experience the <span class="text-gradient">MANARTI EXPORTS</span></h1>
                     </div>
@@ -54,21 +54,94 @@
                 </div>
             </div>
         </section>
+        <section class="py-5 overflow-hidden" style="border-radius: 0 0 100px 100px;"></section>
     </main>
 
     <footer class="py-5 bg-body position-relative">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
+            <div class="row row-gap-4">
+                <div class="col-lg-3 col-md-6">
                     <a href="#">
                         <img src="images/footer-logo.png" alt="Footer Logo" class="img-fluid mb-3" />
                     </a>
                     <p>114/115, First Floor, Vishwadeep Tower, District Centre, Janak Puri, New Delhi-110058 (INDIA)</p>
-                    <a href="#" class="">Show on Map</a>
+                    <a href="#" class="text-decoration-underline">Show on Map</a>
                 </div>
-                <div class="col-lg-3"></div>
-                <div class="col-lg-3"></div>
-                <div class="col-lg-3"></div>
+                <div class="col-lg-3 offset-xl-1 col-md-6">
+                    <h4 class="mb-3">Need help</h4>
+                    <a href="tel:01149404331" class="d-inline-block fs-2 fw-bold mb-2">011-49404331</a>
+                    <p>10:00am - 6:30pm</p>
+                    <div class="links d-flex align-items-center">
+                        <div class="icons-circle me-3">
+                            <svg width="21" height="16" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M2.19946 16C1.64946 16 1.17846 15.804 0.786464 15.412C0.394464 15.02 0.198798 14.5493 0.199465 14V2C0.199465 1.45 0.395465 0.979002 0.787465 0.587002C1.17946 0.195002 1.65013 -0.000664969 2.19946 1.69779e-06H18.1995C18.7495 1.69779e-06 19.2205 0.196001 19.6125 0.588001C20.0045 0.980001 20.2001 1.45067 20.1995 2V14C20.1995 14.55 20.0035 15.021 19.6115 15.413C19.2195 15.805 18.7488 16.0007 18.1995 16H2.19946ZM10.1995 8.825C10.2828 8.825 10.3705 8.81234 10.4625 8.787C10.5545 8.76167 10.6418 8.72434 10.7245 8.675L17.7995 4.25C17.9328 4.16667 18.0328 4.06234 18.0995 3.937C18.1661 3.81167 18.1995 3.67434 18.1995 3.525C18.1995 3.19167 18.0578 2.94167 17.7745 2.775C17.4911 2.60834 17.1995 2.61667 16.8995 2.8L10.1995 7L3.49946 2.8C3.19946 2.61667 2.9078 2.61267 2.62446 2.788C2.34113 2.96334 2.19946 3.209 2.19946 3.525C2.19946 3.69167 2.2328 3.83767 2.29946 3.963C2.36613 4.08834 2.46613 4.184 2.59946 4.25L9.67447 8.675C9.7578 8.725 9.84546 8.76267 9.93746 8.788C10.0295 8.81334 10.1168 8.82567 10.1995 8.825Z" fill="#0099FF"/>
+                            </svg>
+                        </div>
+                        <div>
+                            <a href="mailto:info@manartiexports.com" class="fw-medium">info@manartiexports.com</a><br/>
+                            <a href="mailto:manartiexports@gmail.com" class="fw-medium">manartiexports@gmail.com</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-3 col-md-6">
+                    <h4 class="mb-3">Information</h4>
+                    <ul class="list-unstyled mb-0 links">
+                        <li class="mb-2 fw-medium">
+                            <a href="#">About Us</a>
+                        </li>
+                        <li class="mb-2 fw-medium">
+                            <a href="#">Our Products</a>
+                        </li>
+                        <li class="mb-2 fw-medium">
+                            <a href="#">Quality Policy</a>
+                        </li>
+                        <li class="mb-2 fw-medium">
+                            <a href="#">Career</a>
+                        </li>
+                        <li class="mb-2 fw-medium">
+                            <a href="#">Blogs</a>
+                        </li>
+                        <li class="mb-2 fw-medium">
+                            <a href="#">Terms & Condition</a>
+                        </li>
+                        <li class="fw-medium">
+                            <a href="#">Privacy Policy</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="mb-3">Follow Us</h4>
+                    <div class="d-flex">
+                        <a href="#" class="me-3">
+                            <div class="icons-circle">
+                                <svg width="11" height="20" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M9.11999 3.32003H11V0.14003C10.0897 0.045377 9.17514 -0.00135428 8.25999 2.98641e-05C5.53999 2.98641e-05 3.67999 1.66003 3.67999 4.70003V7.32003H0.609985V10.88H3.67999V20H7.35998V10.88H10.42L10.88 7.32003H7.35998V5.05003C7.35998 4.00003 7.63999 3.32003 9.11999 3.32003Z" fill="#0099FF"/>
+                                </svg>
+                            </div>
+                        </a>
+                        <a href="#" class="me-3">
+                            <div class="icons-circle">
+                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M14.5 0.25H5.5C4.10807 0.251489 2.77358 0.805091 1.78933 1.78933C0.805091 2.77358 0.251489 4.10807 0.25 5.5V14.5C0.251489 15.8919 0.805091 17.2264 1.78933 18.2107C2.77358 19.1949 4.10807 19.7485 5.5 19.75H14.5C15.8919 19.7485 17.2264 19.1949 18.2107 18.2107C19.1949 17.2264 19.7485 15.8919 19.75 14.5V5.5C19.7485 4.10807 19.1949 2.77358 18.2107 1.78933C17.2264 0.805091 15.8919 0.251489 14.5 0.25ZM10 14.5C9.10998 14.5 8.23995 14.2361 7.49993 13.7416C6.75991 13.2471 6.18314 12.5443 5.84254 11.7221C5.50195 10.8998 5.41283 9.99501 5.58647 9.12209C5.7601 8.24918 6.18868 7.44736 6.81802 6.81802C7.44736 6.18868 8.24918 5.7601 9.12209 5.58647C9.99501 5.41283 10.8998 5.50195 11.7221 5.84254C12.5443 6.18314 13.2471 6.75991 13.7416 7.49993C14.2361 8.23995 14.5 9.10998 14.5 10C14.4988 11.1931 14.0243 12.337 13.1806 13.1806C12.337 14.0243 11.1931 14.4988 10 14.5ZM15.625 5.5C15.4025 5.5 15.185 5.43402 15 5.3104C14.815 5.18679 14.6708 5.01109 14.5856 4.80552C14.5005 4.59995 14.4782 4.37375 14.5216 4.15552C14.565 3.93729 14.6722 3.73684 14.8295 3.5795C14.9868 3.42217 15.1873 3.31502 15.4055 3.27162C15.6238 3.22821 15.85 3.25049 16.0555 3.33564C16.2611 3.42078 16.4368 3.56498 16.5604 3.74998C16.684 3.93499 16.75 4.1525 16.75 4.375C16.75 4.67337 16.6315 4.95952 16.4205 5.1705C16.2095 5.38147 15.9234 5.5 15.625 5.5ZM13 10C13 10.5933 12.8241 11.1734 12.4944 11.6667C12.1648 12.1601 11.6962 12.5446 11.1481 12.7716C10.5999 12.9987 9.99667 13.0581 9.41473 12.9424C8.83279 12.8266 8.29824 12.5409 7.87868 12.1213C7.45912 11.7018 7.1734 11.1672 7.05764 10.5853C6.94189 10.0033 7.0013 9.40013 7.22836 8.85195C7.45542 8.30377 7.83994 7.83524 8.33329 7.50559C8.82664 7.17595 9.40666 7 10 7C10.7956 7 11.5587 7.31607 12.1213 7.87868C12.6839 8.44129 13 9.20435 13 10Z" fill="#0099FF"/>
+                                </svg>
+                            </div>
+                        </a>
+                        <a href="#" class="me-3">
+                            <div class="icons-circle">
+                                <svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M21.46 2C20.69 2.35 19.86 2.58 19 2.69C19.88 2.16 20.56 1.32 20.88 0.31C20.05 0.81 19.13 1.16 18.16 1.36C17.37 0.5 16.26 0 15 0C12.65 0 10.73 1.92 10.73 4.29C10.73 4.63 10.77 4.96 10.84 5.27C7.28004 5.09 4.11004 3.38 2.00004 0.79C1.63004 1.42 1.42004 2.16 1.42004 2.94C1.42004 4.43 2.17004 5.75 3.33004 6.5C2.62004 6.5 1.96004 6.3 1.38004 6V6.03C1.38004 8.11 2.86004 9.85 4.82004 10.24C4.19077 10.4122 3.53013 10.4362 2.89004 10.31C3.16165 11.1625 3.69358 11.9084 4.41106 12.4429C5.12854 12.9775 5.99549 13.2737 6.89004 13.29C5.37367 14.4904 3.49404 15.1393 1.56004 15.13C1.22004 15.13 0.880039 15.11 0.540039 15.07C2.44004 16.29 4.70004 17 7.12004 17C15 17 19.33 10.46 19.33 4.79C19.33 4.6 19.33 4.42 19.32 4.23C20.16 3.63 20.88 2.87 21.46 2Z" fill="#0099FF"/>
+                                </svg>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="icons-circle">
+                                <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M2.75 0.875C2.18641 0.875 1.64591 1.09888 1.2474 1.4974C0.848883 1.89591 0.625 2.43641 0.625 3C0.625 3.56359 0.848883 4.10409 1.2474 4.5026C1.64591 4.90112 2.18641 5.125 2.75 5.125C3.31359 5.125 3.85409 4.90112 4.2526 4.5026C4.65112 4.10409 4.875 3.56359 4.875 3C4.875 2.43641 4.65112 1.89591 4.2526 1.4974C3.85409 1.09888 3.31359 0.875 2.75 0.875ZM0.75 6.875C0.716848 6.875 0.685054 6.88817 0.661612 6.91161C0.63817 6.93505 0.625 6.96685 0.625 7V20C0.625 20.069 0.681 20.125 0.75 20.125H4.75C4.78315 20.125 4.81495 20.1118 4.83839 20.0884C4.86183 20.0649 4.875 20.0332 4.875 20V7C4.875 6.96685 4.86183 6.93505 4.83839 6.91161C4.81495 6.88817 4.78315 6.875 4.75 6.875H0.75ZM7.25 6.875C7.21685 6.875 7.18505 6.88817 7.16161 6.91161C7.13817 6.93505 7.125 6.96685 7.125 7V20C7.125 20.069 7.181 20.125 7.25 20.125H11.25C11.2832 20.125 11.3149 20.1118 11.3384 20.0884C11.3618 20.0649 11.375 20.0332 11.375 20V13C11.375 12.5027 11.5725 12.0258 11.9242 11.6742C12.2758 11.3225 12.7527 11.125 13.25 11.125C13.7473 11.125 14.2242 11.3225 14.5758 11.6742C14.9275 12.0258 15.125 12.5027 15.125 13V20C15.125 20.069 15.181 20.125 15.25 20.125H19.25C19.2832 20.125 19.3149 20.1118 19.3384 20.0884C19.3618 20.0649 19.375 20.0332 19.375 20V11.38C19.375 8.953 17.265 7.055 14.85 7.274C14.1028 7.34202 13.3709 7.52694 12.681 7.822L11.375 8.382V7C11.375 6.96685 11.3618 6.93505 11.3384 6.91161C11.3149 6.88817 11.2832 6.875 11.25 6.875H7.25Z" fill="#0099FF"/>
+                                </svg>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
